# bicycle-ai

./: .env.example  .gitignore  README.md  adhoc.ipynb  adhoc.py  main.py  pyproject.toml
app/: database.py  database_schema.json  main.py
app/schemas/: db_schemas.py  file_schemas.py
app/services/: column_rename_service.py  data_clean_service.py  data_model_service.py  data_qa_basic.py  data_qa_react.py  data_qa_service.py  data_transform_service.py  missing_data_service.py
data/: test_missing_data.csv
docs/: data_cleaning.txt  data_modeling.txt  data_qa.txt  models.txt  mvp.txt  note.txt  problem_statement.txt  qa_output.txt  qa_output_2.txt  qa_output_3.txt  qa_output_4.txt
notes/: agent.txt  need_to_handle.txt  plan.txt
schemas/: file_schemas.py
services/: column_rename_service.py  utils.py
tests/: __init__.py  test_data_clean.py
